--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.3.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.teimour.dictionary</groupId>
+    <groupId>com.teimour.wordsaver</groupId>
     <artifactId>word-saver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>word-saver</name>
